add clarification about image creation

--- a/00-math.ipynb
+++ b/00-math.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Create images"
+    "## Create images of math equations using +,-,x"
    ]
   },
   {
